@@ -398,6 +398,17 @@ This option should ONLY be used on systems that do not have a clock
 and that DO provide other mechanisms for cache control.  See also
 RFC 2616, section 14.18 (exception 3).
 
+
+@item MHD_USE_NO_LISTEN_SOCKET
+@cindex listen
+@cindex proxy
+@cindex embedded systems
+Run the HTTP server without any listen socket.  This option only makes
+sense if @code{MHD_add_connection} is going to be used exclusively to
+connect HTTP clients to the HTTP server.  This option is incompatible
+with using a thread pool; if it is used,
+@code{MHD_OPTION_THREAD_POOL_SIZE} is ignored.
+
 @end table
 @end deftp
 
